@@ -16,9 +16,10 @@ package megamek.common.loaders;
 
 import java.util.ArrayList;
 import java.util.Enumeration;
-import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Vector;
+import java.util.stream.Collectors;
 
 import megamek.common.ASFBay;
 import megamek.common.Aero;
@@ -26,13 +27,15 @@ import megamek.common.AmmoType;
 import megamek.common.BattleArmor;
 import megamek.common.BattleArmorBay;
 import megamek.common.Bay;
-import megamek.common.BayType;
 import megamek.common.CargoBay;
 import megamek.common.ConvFighter;
 import megamek.common.CrewQuartersCargoBay;
+import megamek.common.DockingCollar;
 import megamek.common.Dropship;
+import megamek.common.DropshuttleBay;
 import megamek.common.Engine;
 import megamek.common.Entity;
+import megamek.common.EntityFluff;
 import megamek.common.EquipmentType;
 import megamek.common.FirstClassQuartersCargoBay;
 import megamek.common.FixedWingSupport;
@@ -51,10 +54,12 @@ import megamek.common.LocationFullException;
 import megamek.common.Mech;
 import megamek.common.MechBay;
 import megamek.common.Mounted;
+import megamek.common.NavalRepairFacility;
 import megamek.common.PillionSeatCargoBay;
 import megamek.common.Protomech;
 import megamek.common.ProtomechBay;
 import megamek.common.RefrigeratedCargoBay;
+import megamek.common.ReinforcedRepairFacility;
 import megamek.common.SecondClassQuartersCargoBay;
 import megamek.common.SmallCraft;
 import megamek.common.SmallCraftBay;
@@ -93,7 +98,6 @@ public class BLKFile {
     public static final int BATTERY = 11;
     public static final int SOLAR = 12;
     
-    private static final String BAY_DATA_SEPARATOR = ":"; 
     private static final String COMSTAR_BAY = "c*";
 
     protected void loadEquipment(Entity t, String sName, int nLoc)
@@ -247,6 +251,34 @@ public class BLKFile {
         if (dataFile.exists("history")) {
             e.getFluff().setHistory(dataFile.getDataAsString("history")[0]);
         }
+        
+        if (dataFile.exists("manufacturer")) {
+        	e.getFluff().setManufacturer(dataFile.getDataAsString("manufacturer")[0]);
+        }
+
+        if (dataFile.exists("primaryFactory")) {
+        	e.getFluff().setPrimaryFactory(dataFile.getDataAsString("primaryFactory")[0]);
+        }
+        
+        if (dataFile.exists("systemManufacturers")) {
+        	for (String line : dataFile.getDataAsString("systemManufacturers")) {
+        		String[] fields = line.split(":");
+        		EntityFluff.System comp = EntityFluff.System.parse(fields[0]);
+        		if ((null != comp) && (fields.length > 1)) {
+        			e.getFluff().setSystemManufacturer(comp, fields[1]);
+        		}
+        	}
+        }
+
+        if (dataFile.exists("systemModels")) {
+        	for (String line : dataFile.getDataAsString("systemModels")) {
+        		String[] fields = line.split(":");
+        		EntityFluff.System comp = EntityFluff.System.parse(fields[0]);
+        		if ((null != comp) && (fields.length > 1)) {
+        			e.getFluff().setSystemModel(comp, fields[1]);
+        		}
+        	}
+        }
 
 
         if (dataFile.exists("imagepath")) {
@@ -254,6 +286,26 @@ public class BLKFile {
                     dataFile.getDataAsString("imagepath")[0]);
         }
 
+        if (dataFile.exists("notes")) {
+            e.getFluff().setNotes(dataFile.getDataAsString("notes")[0]);
+        }
+        
+        if (dataFile.exists("use")) {
+            e.getFluff().setUse(dataFile.getDataAsString("use")[0]);
+        }
+        
+        if (dataFile.exists("length")) {
+            e.getFluff().setLength(dataFile.getDataAsString("length")[0]);
+        }
+        
+        if (dataFile.exists("width")) {
+            e.getFluff().setWidth(dataFile.getDataAsString("width")[0]);
+        }
+        
+        if (dataFile.exists("height")) {
+            e.getFluff().setHeight(dataFile.getDataAsString("height")[0]);
+        }
+        
         if (dataFile.exists("source")) {
             e.setSource(dataFile.getDataAsString("source")[0]);
         }
@@ -461,17 +513,15 @@ public class BLKFile {
                 blk.writeBlockData("SafeThrust", t.getOriginalWalkMP());
             } else {
                 blk.writeBlockData("cruiseMP", t.getOriginalWalkMP());
+                if (t.hasETypeFlag(Entity.ETYPE_PROTOMECH)) {
+                    blk.writeBlockData("jumpingMP", t.getOriginalJumpMP());
+                    blk.writeBlockData("interface_cockpit",
+                            String.valueOf(((Protomech) t).hasInterfaceCockpit()));
+                }
             }
         }
 
         int numLocs = t.locations();
-        // Aeros have an extra special location called "wings" that we
-        //  don't want to consider, but Fixed Wing Support vehicles have a "Body" location that will
-        // not index right if the wings locations is removed.
-        if (t instanceof Aero && t.isFighter() && !(t instanceof FixedWingSupport)) {
-            numLocs--;
-        }
-
         if (!(t instanceof Infantry)) {
             if (t instanceof Aero){
                 if (t.isFighter()) {
@@ -519,7 +569,7 @@ public class BLKFile {
             } else if (t.hasPatchworkArmor()) {
                 blk.writeBlockData("armor_type",
                         EquipmentType.T_ARMOR_PATCHWORK);
-                for (int i = 1; i < numLocs; i++) {
+                for (int i = 1; i < t.locations(); i++) {
                     blk.writeBlockData(t.getLocationName(i) + "_armor_type",
                             t.getArmorType(i));
                     blk.writeBlockData(t.getLocationName(i) + "_armor_tech",
@@ -532,13 +582,13 @@ public class BLKFile {
             if (t.isOmni()) {
                 blk.writeBlockData("omni", 1);
             }
+            
             int armor_array[];
-            if (t instanceof Aero){
-                if (t instanceof FixedWingSupport) {
-                    //exclude body and wings
-                    armor_array = new int[numLocs - 2];
+            if (t.hasETypeFlag(Entity.ETYPE_AERO)) {
+                if (t.hasETypeFlag(Entity.ETYPE_JUMPSHIP)) {
+                    armor_array = new int[6];
                 } else {
-                    armor_array = new int[numLocs];
+                    armor_array = new int[4];
                 }
                 for (int i = 0; i < armor_array.length; i++) {
                     armor_array[i] = t.getOArmor(i);
@@ -646,11 +696,14 @@ public class BLKFile {
             if (m.getBaMountLoc() == BattleArmor.MOUNT_LOC_TURRET){
                 name += ":TU";
             }
-            // For BattleArmor, we need to save how many shots are in this
-            //  location
+            // For BattleArmor and ProtoMechs, we need to save how many shots are in this
+            //  location but they have different formats, yay!
             if ((t instanceof BattleArmor)
                     && (m.getType() instanceof AmmoType)){
                 name += ":Shots" + m.getBaseShotsLeft() + "#";
+            } else if (t.hasETypeFlag(Entity.ETYPE_PROTOMECH)
+                    && (m.getType() instanceof AmmoType)) {
+                name += " (" + m.getBaseShotsLeft() + ")";
             }
             int loc = m.getLocation();
             if (loc != Entity.LOC_NONE) {
@@ -688,12 +741,50 @@ public class BLKFile {
             blk.writeBlockData("deployment", t.getFluff().getDeployment());
         }
 
-        if (t.getFluff().getDeployment().trim().length() > 0) {
+        if (t.getFluff().getHistory().trim().length() > 0) {
             blk.writeBlockData("history", t.getFluff().getHistory());
+        }
+
+        if (t.getFluff().getManufacturer().trim().length() > 0) {
+            blk.writeBlockData("manufacturer", t.getFluff().getManufacturer());
+        }
+
+        if (t.getFluff().getPrimaryFactory().trim().length() > 0) {
+            blk.writeBlockData("primaryFactory", t.getFluff().getPrimaryFactory());
+        }
+        
+        List<String> list = t.getFluff().createSystemManufacturersList();
+        if (!list.isEmpty()) {
+        	blk.writeBlockData("systemManufacturers", list);
+        }
+
+        list = t.getFluff().createSystemModelsList();
+        if (!list.isEmpty()) {
+        	blk.writeBlockData("systemModels", list);
         }
 
         if (t.getFluff().getMMLImagePath().trim().length() > 0) {
             blk.writeBlockData("imagepath", t.getFluff().getMMLImagePath());
+        }
+
+        if (t.getFluff().getNotes().trim().length() > 0) {
+            blk.writeBlockData("notes", t.getFluff().getNotes());
+        }
+
+        if (t.getFluff().getUse().trim().length() > 0) {
+            blk.writeBlockData("use", t.getFluff().getUse());
+        }
+
+        if (t.getFluff().getLength().trim().length() > 0) {
+            blk.writeBlockData("length", t.getFluff().getLength());
+        }
+
+        if (t.getFluff().getWidth().trim().length() > 0) {
+            blk.writeBlockData("width", t.getFluff().getWidth());
+        }
+
+        if (t.getFluff().getHeight().trim().length() > 0) {
+            blk.writeBlockData("height", t.getFluff().getHeight());
         }
 
         if (t.getSource().trim().length() > 0) {
@@ -817,6 +908,40 @@ public class BLKFile {
             blk.writeBlockData("escape_pod", sc.getEscapePods());
         }
 
+        if (t instanceof Warship) {
+            Warship ws = (Warship) t;
+            blk.writeBlockData("kf_core", ws.getDriveCoreType());
+            if (ws.getDriveCoreType() == Warship.DRIVE_CORE_PRIMITIVE) {
+                blk.writeBlockData("jump_range", ws.getJumpRange());
+            }
+        } else if ((t instanceof SpaceStation)
+                && ((SpaceStation) t).isModular()) {
+            blk.writeBlockData("modular", 1);
+        }
+        
+        if (t instanceof Jumpship) {
+            Jumpship js = (Jumpship) t;
+            if (js.hasHPG()) {
+                blk.writeBlockData("hpg", 1);
+            }
+            if (js.hasLF()) {
+                blk.writeBlockData("lithium-fusion", 1);
+            }
+            blk.writeBlockData("sail", js.hasSail()? 1 : 0);
+            if (js.getTotalGravDeck() > 0) {
+                blk.writeBlockData("grav_decks", (Vector<String>)js.getGravDecks().stream()
+                        .map(String::valueOf)
+                        .collect(Collectors.toCollection(Vector::new)));
+            }
+            blk.writeBlockData("crew", js.getNCrew());
+            blk.writeBlockData("officers", js.getNOfficers());
+            blk.writeBlockData("gunners", js.getNGunners());
+            blk.writeBlockData("passengers", js.getNPassenger());
+            blk.writeBlockData("marines", js.getNMarines());
+            blk.writeBlockData("battlearmor", js.getNBattleArmor());
+            blk.writeBlockData("life_boat", js.getLifeBoats());
+            blk.writeBlockData("escape_pod", js.getEscapePods());
+        }
         return blk;
     }
 
@@ -835,14 +960,11 @@ public class BLKFile {
                 transporter = transporter.toLowerCase();
             	boolean isPod = transporter.endsWith(":omni");
             	transporter = transporter.replace(":omni", "");
-                // for bays, we have to save the baynumber in each bay, because
-                // one conceptual bay can contain several different ones
-                // we default to bay 1
-                int bayNumber = 1;
-                // TroopSpace:
+
+            	// TroopSpace:
                 if (transporter.startsWith("troopspace:", 0)) {
                     // Everything after the ':' should be the space's size.
-                    Double fsize = new Double(transporter.substring(11));
+                    double fsize = Double.valueOf(transporter.substring(11));
                     e.addTransporter(new TroopSpace(fsize), isPod);
                 } else if (transporter.startsWith("cargobay:", 0)) {
                     String numbers = transporter.substring(9);
@@ -905,6 +1027,22 @@ public class BLKFile {
                     String numbers = transporter.substring(13);
                     ParsedBayInfo pbi = new ParsedBayInfo(numbers, usedBayNumbers);
                     e.addTransporter(new ProtomechBay(pbi.getSize(), pbi.getDoors(), pbi.getBayNumber()));
+                } else if (transporter.startsWith("dropshuttlebay:")) {
+                    String numbers = transporter.substring("dropshuttlebay:".length());
+                    ParsedBayInfo pbi = new ParsedBayInfo(numbers, usedBayNumbers);
+                    e.addTransporter(new DropshuttleBay(pbi.getDoors(), pbi.getBayNumber(), pbi.getFacing()));
+                } else if (transporter.startsWith("navalrepairpressurized:")) {
+                    String numbers = transporter.substring("navalrepairpressurized:".length());
+                    ParsedBayInfo pbi = new ParsedBayInfo(numbers, usedBayNumbers);
+                    e.addTransporter(new NavalRepairFacility(pbi.getSize(), pbi.getDoors(), pbi.getBayNumber(), pbi.getFacing(), true));
+                } else if (transporter.startsWith("navalrepairunpressurized:")) {
+                    String numbers = transporter.substring("navalrepairunpressurized:".length());
+                    ParsedBayInfo pbi = new ParsedBayInfo(numbers, usedBayNumbers);
+                    e.addTransporter(new NavalRepairFacility(pbi.getSize(), pbi.getDoors(), pbi.getBayNumber(), pbi.getFacing(), false));
+                } else if (transporter.startsWith("reinforcedrepairfacility:")) {
+                    String numbers = transporter.substring("reinforcedrepairfacility:".length());
+                    ParsedBayInfo pbi = new ParsedBayInfo(numbers, usedBayNumbers);
+                    e.addTransporter(new ReinforcedRepairFacility(pbi.getSize(), pbi.getDoors(), pbi.getBayNumber(), pbi.getFacing()));
                 } else if (transporter.startsWith("crewquarters:", 0)) {
                     String numbers = transporter.substring(13);
                     ParsedBayInfo pbi = new ParsedBayInfo(numbers, usedBayNumbers);
@@ -929,6 +1067,8 @@ public class BLKFile {
                     String numbers = transporter.substring(14);
                     ParsedBayInfo pbi = new ParsedBayInfo(numbers, usedBayNumbers);
                     e.addTransporter(new StandardSeatCargoBay(pbi.getSize(), pbi.getDoors()));
+                } else if (transporter.startsWith("dockingcollar", 0)) {
+                    e.addTransporter(new DockingCollar(1));
                 }
 
             } // Handle the next transportation component.
@@ -942,12 +1082,13 @@ public class BLKFile {
      * @author NickAragua
      *
      */
-    public class ParsedBayInfo {
+    public static class ParsedBayInfo {
         private double size;
         private int doors;
         private int bayNumber = -1;
         private PlatoonType platoonType = InfantryBay.PlatoonType.FOOT;
         private boolean isComstarBay;
+        private int facing = Entity.LOC_NONE;
         
         public ParsedBayInfo(String numbers, HashSet<Integer> usedBayNumbers) {
             // expected format of "numbers" string:
@@ -957,7 +1098,7 @@ public class BLKFile {
             // c is the bay number OR an indicator that this bay is a comstar bay OR an indicator of the kind of infantry bay it is, and is optional
             // d is like c except that it's not going to be the bay number
             
-            String temp[] = numbers.split(BAY_DATA_SEPARATOR);
+            String temp[] = numbers.split(Bay.FIELD_SEPARATOR);
             size = Double.parseDouble(temp[0]);
             doors = Integer.parseInt(temp[1]);
             
@@ -979,10 +1120,14 @@ public class BLKFile {
                     isComstarBay = true;
                 } else if (potentialBayTypeIndicator.equalsIgnoreCase("jump")) {
                     platoonType = InfantryBay.PlatoonType.JUMP;
+                } else if (potentialBayTypeIndicator.equalsIgnoreCase("foot")) {
+                    platoonType = InfantryBay.PlatoonType.FOOT;
                 } else if (potentialBayTypeIndicator.equalsIgnoreCase("motorized")) {
                     platoonType = InfantryBay.PlatoonType.MOTORIZED;
                 } else if (potentialBayTypeIndicator.equalsIgnoreCase("mechanized")) {
                     platoonType = InfantryBay.PlatoonType.MECHANIZED;
+                } else if (potentialBayTypeIndicator.startsWith(Bay.FACING_PREFIX)) {
+                    facing = Integer.parseInt(potentialBayTypeIndicator.replace(Bay.FACING_PREFIX, ""));
                 } else {
                     // if we looked at the 
                     bayNumberPresent = temp.length == 3; 
@@ -1027,6 +1172,10 @@ public class BLKFile {
         
         public boolean isComstarBay() {
             return isComstarBay;
+        }
+        
+        public int getFacing() {
+            return facing;
         }
     }
 }
